--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "eslint": "8.23.1",
-    "eslint-config-next": "12.3.0"
+    "@rocketseat/eslint-config": "^1.1.3",
+    "@types/node": "^18.7.18",
+    "@types/react": "^18.0.20",
+    "eslint": "^8.23.1",
+    "eslint-config-next": "12.3.0",
+    "typescript": "^4.8.3"
   }
 }
